<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.SettingsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/extensions"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center_vertical"
                android:text="@string/extensions"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/searchExtensionsButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/search"
                    app:srcCompat="@drawable/ic_round_search_24"
                    app:tint="?attr/colorOnBackground" />

                <ImageButton
                    android:id="@+id/testButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/sort_by"
                    app:srcCompat="@drawable/ic_round_search_sources_24"
                    app:tint="?attr/colorOnBackground" />

                <ImageButton
                    android:id="@+id/openSettingsButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/sort_by"
                    app:srcCompat="@drawable/ic_github"
                    app:tint="?attr/colorOnBackground" />

                <ImageButton
                    android:id="@+id/languageselect"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/sort_by"
                    app:srcCompat="@drawable/ic_round_translate_24"
                    app:tint="?attr/colorOnBackground" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchView"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            android:transitionName="@string/search"
            app:boxBackgroundColor="@color/bg"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="28dp"
            app:boxCornerRadiusBottomStart="28dp"
            app:boxCornerRadiusTopEnd="28dp"
            app:boxCornerRadiusTopStart="28dp"
            app:startIconDrawable="@drawable/ic_circle_arrow_left_24"
            app:startIconTint="?attr/colorOnBackground"
            app:endIconDrawable="@drawable/ic_round_search_24"
            app:hintAnimationEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/searchViewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:paddingBottom="4dp"
                android:selectAllOnFocus="true"
                android:textSize="14sp"
                tools:ignore="LabelFor,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </FrameLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:tabContentStart="32dp"
        app:tabGravity="fill"
        app:tabMode="scrollable"
        app:tabPaddingEnd="16dp"
        app:tabPaddingStart="16dp"
        app:tabTextAppearance="@style/NavBarText" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <FrameLayout
        android:id="@+id/fragmentExtensionsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</LinearLayout>
